# graphql-parser-hs

./: .envrc  .gitignore  .hlint.yaml  ChangeLog.md  Makefile  README.md  cabal.project  flake.nix  graphql-parser.cabal  package.yaml  shell.nix  stack.yaml
.circleci/: config.yml
.github/workflows/: ci.yml  format.yml  lint.yml  weeder.yml
bench/: Benchmark.hs
benchmark/: Benchmark.hs
ci/: ci.project.local  weeder.project.local
ci/8.10.7/: weeder.project.local
ci/9.0.2/: weeder.project.local
executables/weeder/: Main.hs
src/Generator/Language/GraphQL/: Document.hs  Primitives.hs  Selection.hs  TypeDefinition.hs
src/Language/: GraphQL.hs
src/Language/GraphQL/Draft/: Analyse.hs  Gen.hs  Generator.hs  Instances.hs  JSON.hs  Parser.hs  Parser.hs-boot  Pretty.hs  Print.hs  Printer.hs  Printer.hs-boot  Syntax.hs  Syntax.hs-boot  TH.hs
src/Language/GraphQL/Draft/Generator/: Document.hs  Primitives.hs  Selection.hs  TypeDefinition.hs
src/Language/GraphQL/Draft/Printer/: ByteString.hs  LazyText.hs  Pretty.hs  Text.hs  Text.hs-boot  TextBuilder.hs
src/Language/GraphQL/Draft/Syntax/: Internal.hs  Name.hs  QQ.hs
test/: BlockStrings.hs  Keywords.hs  NullishColumns.hs  Spec.hs  UnitTests.hs  primitiveColumns.hs
test/Language/GraphQL/Draft/Generator/: Document.hs  Primitives.hs  TypeDefinition.hs
tests/: Driver.hs
tests/Language/GraphQL/Draft/: ParserTest.hs
