cabal-version: 3.0
name:          graphql-parser
version:       0.2.0.0
synopsis:      A native Haskell GraphQL parser.
homepage:      https://github.com/hasura/graphql-parser-hs
bug-reports:   https://github.com/hasura/graphql-parser-hs/issues
author:        Vamshi Surabhi
maintainer:    vamshi@hasura.io
copyright:     2018–2020 Hasura Inc., 2015 J. Daniel Navarro
license:       BSD-3-Clause
license-file:  LICENSE
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/hasura/graphql-parser-hs

-------------------------------------------------------------------------------

flag hedgehog
  description: Provides hedgehog generators for GraphQL syntax constructs.
  default:     False
  manual:      True

-------------------------------------------------------------------------------

-- Settings shared between all components.
--
-- NOTE: '-Wunused-packages' seems to introduce a lot of spurious warnings.
common common-settings
  ghc-options:
    -Weverything -Wno-missing-exported-signatures
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-missed-specialisations -Wno-all-missed-specializations
    -Wno-unsafe -Wno-safe -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures -Wno-monomorphism-restriction
    -Wno-implicit-prelude
    -Wno-unused-packages

  default-language:   Haskell2010
  default-extensions:
    BlockArguments
    ConstraintKinds
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    EmptyCase
    EmptyDataDeriving
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    RankNTypes
    RecordWildCards
    RoleAnnotations
    StrictData
    TupleSections

-- Libraries shared between most components.
common common-libraries
  build-depends:
    , aeson
    , attoparsec
    , base                  >=4.7 && <5
    , bytestring
    , containers
    , deepseq
    , filepath
    , hashable
    , hedgehog
    , prettyprinter
    , scientific
    , template-haskell
    , text
    , text-builder
    , th-lift-instances
    , unordered-containers
    , vector

  if flag(hedgehog)
    build-depends: hedgehog

-- Settings shared between all test and benchmark components.
common common-tests-benchmarks
  ghc-options:   -threaded -rtsopts -with-rtsopts=-N
  build-depends: graphql-parser

-------------------------------------------------------------------------------

library
  import:
    common-settings,
    common-libraries

  hs-source-dirs:  src
  exposed-modules:
    Language.GraphQL.Draft.Parser
    Language.GraphQL.Draft.Printer
    Language.GraphQL.Draft.Syntax

  if flag(hedgehog)
    exposed-modules: Language.GraphQL.Draft.Gen

-------------------------------------------------------------------------------

test-suite graphql-parser-test
  import:
    common-settings,
    common-libraries,
    common-tests-benchmarks

  hs-source-dirs: test
  main-is:        Spec.hs
  type:           exitcode-stdio-1.0
  other-modules:
    BlockStrings
    Keywords

  build-depends:  hedgehog

-------------------------------------------------------------------------------

benchmark graphql-parser-bench
  import:
    common-settings,
    common-libraries,
    common-tests-benchmarks

  hs-source-dirs: bench
  main-is:        Benchmark.hs
  type:           exitcode-stdio-1.0
  build-depends:  criterion
