cabal-version: 3.0
name:          graphql-parser
version:       0.2.0.0
synopsis:      A native Haskell GraphQL parser.
homepage:      https://github.com/hasura/graphql-parser-hs
bug-reports:   https://github.com/hasura/graphql-parser-hs/issues
author:        Vamshi Surabhi
maintainer:    vamshi@hasura.io
copyright:     2018–2022 Hasura Inc., 2015 J. Daniel Navarro
license:       BSD-3-Clause
license-file:  LICENSE
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/hasura/graphql-parser-hs

common common-all
  -- This warning strategy was inspired by Max Tagher's 'Enable All the
  -- Warnings' blog post.
  --
  -- NOTE: '-Wno-prepositive-qualified-module' is currently a workaround for
  -- https://github.com/haskell/cabal/pull/7352
  ghc-options:
    -Weverything -Wno-missing-exported-signatures
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-missed-specialisations -Wno-all-missed-specializations
    -Wno-unsafe -Wno-safe -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures -Wno-monomorphism-restriction
    -Wno-prepositive-qualified-module

  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BlockArguments
    ConstraintKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    EmptyCase
    EmptyDataDeriving
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    RankNTypes
    RecordWildCards
    RoleAnnotations
    StrictData
    TupleSections

library
  import:          common-all
  hs-source-dirs:  src
  build-depends:
    , aeson
    , attoparsec
    , base                  >=4.7      && <5
    , bytestring
    , deepseq
    , hashable
    , hedgehog
    , prettyprinter
    , scientific
    , template-haskell      >=2.16.0.0
    , text
    , text-builder
    , th-lift-instances
    , unordered-containers

  -- cabal-fmt: expand src
  --
  exposed-modules:
    Language.GraphQL.Draft.Generator
    Language.GraphQL.Draft.Parser
    Language.GraphQL.Draft.Printer
    Language.GraphQL.Draft.Syntax

test-suite graphql-parser-test
  import:         common-all
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  other-modules:
    BlockStrings
    Keywords

  build-depends:
    , attoparsec
    , base            >=4.7 && <5
    , bytestring
    , graphql-parser
    , hedgehog
    , prettyprinter
    , scientific
    , text
    , text-builder

benchmark graphql-parser-bench
  import:         common-all
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Benchmark.hs
  build-depends:
    , base            >=4.7 && <5
    , bytestring
    , graphql-parser
    , prettyprinter
    , tasty-bench
    , text
    , text-builder
